# sweethome

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Makefile.install  Makefile.mac  Pipfile.venv_vim  alacritty.yml  amm  apt-get.packages  apt-get_packages.sh  bashrc  brew.packages  brew_packages.sh  gitconfig  gitignore  gvimrc  ideavimrc  keymap  liquidpromptrc  pip.packages  pip_packages.sh  pyproject.toml  scalafmt.conf  setup.cfg  setup.sh  tmux.conf  tmux.md  ubuntu.packages  vim.Pipfile  vimrc
.vim/: coc-settings.json
SpaceVim.d/: README.md  init.toml  init.vim  seq.txt
SpaceVim.d/ale_linters/java/: arc.vim
SpaceVim.d/autoload/: myspacevim.vim
SpaceVim.d/plugin/: redir.vim
SpaceVim.d/syntax/: javaid.vim  tsc.vim
ammonite/: .gitignore  .scalafmt.conf  Makefile  ScalaUdfExample.sc  build.sbt  predef.sc  predefScript.sc  repos.sc  repositoriesLocal.sc  sparkjars.sc  test.sc
docs/: fzf.md  tags.md
env.d/: 00_feature_flags.env  40_history.env  41_bash_completion.env  45_pyenv.env  46_sdkman.env  47_spacevim.env  50_pyenv.env  50_pyenv.env.manual  51_docker.env  52_go.env  57_sbt.env  60_ctags.env  61_deepin.env  62_fzf.env  88_thefuck.env  89_liquidprompt.env  99_liquidprompt.env  docker.env.disabled  pyenv.env  python.env.disabled
oci/: Makefile
scripts/: apt-get_packages.sh  apt_packages.sh  bigdata-env.sh  brew_packages.sh  install_or_upgrade_pyenv.sh  pip_packages.sh  test-color.awk
tmuxp/: c3.yaml
venv-neovim3/: Pipfile  pyproject.toml
vim/after/syntax/: gitcommit.vim  java.vim
vim/plugin/: buftabs.vim  cscope_maps.vim
